# university-timetable-generator

./: .gitignore  README.md  Tesztek2.xlsx  Timetable generator.docx  generator.proto
.github/workflows/: cppcheck.yml
Plotter/: main.py
TestGenerator/TestGenerator/: TestGenerator.sln
TestGenerator/TestGenerator/TestGenerator/: TestGenerator.cpp  TestGenerator.vcxproj  TestGenerator.vcxproj.filters  output.txt
TimetableGenerator/: docker-compose-deps.yml  package-lock.json  package.json
TimetableGenerator/TimetableGenerator/: Course.cpp  Course.h  DateTime.cpp  DateTime.h  TimetableGenerator.cpp  TimetableGenerator.vcxproj  TimetableGenerator.vcxproj.filters  input.txt
TimetableGenerator/backend/: .env  Plot_data.txt  package.json  setup.sql  tsconfig.json
TimetableGenerator/backend/src/: index.js  index.ts
TimetableGenerator/backend/src/api/: AutorizationApi.ts  ClassApi.js  ClassApi.ts  ClassHourApi.js  ClassHourApi.ts  ConstraintApi.ts  LocationApi.js  LocationApi.ts  SubjectApi.ts  TeacherApi.js  TeacherApi.ts  UserApi.ts
TimetableGenerator/backend/src/controllers/: ClassController.js  ClassController.ts  ClassHourController.ts  ConstraintController.ts  LocationController.js  LocationController.ts  SubjectController.js  SubjectController.ts  TeacherController.ts  UserController.js  UserController.ts
TimetableGenerator/backend/src/middleware/: authorizationMiddleware.ts  errorMiddleware.ts  mongoMiddleware.js  mongoMiddleware.ts
TimetableGenerator/backend/src/models/: CatalogEntrySchema.ts  Class.js  Class.ts  ClassHour.js  ClassHour.ts  ClassHourInCatalog.ts  Constraint.js  Constraint.ts  Location.ts  Project.ts  Subject.ts  Teacher.js  Teacher.ts  User.js  User.ts
TimetableGenerator/backend/src/routes/: timetable.js  timetable.ts
TimetableGenerator/backend/src/services/: ClassHourService.js  ClassHourService.ts  ClassService.js  ClassService.ts  ConstraintService.js  ConstraintService.ts  EncryptService.js  EncryptService.ts  GenerationService.js  GenerationService.ts  ImportExportService.js  ImportExportService.ts  LocationService.js  LocationService.ts  SubjectService.js  SubjectService.ts  TeacherService.js  TeacherService.ts  UserService.ts
TimetableGenerator/backend/src/socket/: socket.js  (+18 more)
TimetableGenerator/frontend/: .env  index.html  package.json  vite.config.mts
TimetableGenerator/frontend/src/: App.vue  components.d.ts  main.ts  typed-router.d.ts
TimetableGeneratorEngine/: CMakeLists.txt  TimetableGenerator.sln  TimetableGenerator_solution_suppressions.cfg  readme.txt
TimetableGeneratorEngine/GeneratorServer/: CMakeLists.txt  common.cmake  server.cc
TimetableGeneratorEngine/InputDataGenerator/: CMakeLists.txt  Class.cpp  Class.h  ClassHour.cpp  ClassHour.h  Config.cpp  Config.h  Entity.cpp  Entity.h  InputDataGenerator.cpp  InputDataGenerator.h  InputDataGenerator.vcxproj  InputDataGenerator.vcxproj.filters  Location.cpp  Location.h  Random.cpp  Random.h  Subject.cpp  Subject.h  Teacher.cpp  Teacher.h  generated_input.json  main.cpp  stdafx.h
TimetableGeneratorEngine/TimetableGenerator/: CMakeLists.txt  Catalog.cpp  Catalog.h  Class.cpp  Class.h  ClassCatalog.cpp  ClassCatalog.h  ClassDiagram.cd  ClassHour.cpp  ClassHour.h  Course.cpp  Course.h  Database.cpp  Database.h  DateTime.cpp  DateTime.h  Entity.h  EntityWithCatalog.h  EntityWithName.h  Global.cpp  Global.h  Group.cpp  Group.h  HelperFunctions.cpp  HelperFunctions.h  Hour.cpp  Hour.h  Location.cpp  Location.h  LocationCatalog.cpp  LocationCatalog.h  Major.cpp  Major.h  Plot_data_time.txt  Random.cpp  Random.h  Service.cpp  SubCourse.cpp  SubCourse.h  Subject.cpp  (+20 more)
TimetableGeneratorEngine/TimetableGeneratorExe/: CMakeLists.txt  TimetableGeneratorExe.vcxproj  main.cpp  stdafx.h
Webserver/: .eslintrc.json  Plot_data.txt  index.js  package-lock.json  package.json
Webserver/api/: ClassApi.js  ClassHourApi.js  LocationApi.js  SubjectApi.js  TeacherApi.js
Webserver/controllers/: ClassController.js  ClassHourController.js  LocationController.js  SubjectController.js  TeacherController.js
Webserver/db/: connection.js  createTables.js
Webserver/middleware/: errorMiddleware.js
Webserver/models/: Class.js  ClassHour.js  ClassHourInCatalog.js  Courses.js  Date.js  Location.js  Subject.js  Teacher.js
Webserver/routes/: timetable.js
Webserver/services/: ClassHourService.js  ClassService.js  LocationService.js  SubjectService.js  TeacherService.js
Webserver/src/: index.js
Webserver/src/api/: AutorizationApi.js  ClassApi.js  ClassHourApi.js  ConstraintApi.js  LocationApi.js  SubjectApi.js  TeacherApi.js  UserApi.js
Webserver/src/controllers/: ClassHourController.js  ConstraintController.js  TeacherController.js  UserController.js
Webserver/src/middleware/: authorizationMiddleware.js  errorMiddleware.js
Webserver/src/models/: ClassHourInCatalog.js  Location.js  Subject.js
Webserver/src/routes/: timetable.js
Webserver/src/services/: ClassService.js  EncryptService.js  GenerationService.js  TeacherService.js  UserService.js
Webserver/src/socket/: ClassSocket.js  ConstraintSocket.js  GenerationSocket.js  TeacherSocket.js  socket.js
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  vite.config.mts
frontend/services/: fetch.service.js  socketio.service.js
frontend/src/: App.vue  components.d.ts  index.css  main.js  main.ts  mqttService.js  typed-router.d.ts
frontend/src/assets/: global.css
frontend/src/components/: ClassHour.vue  DatePicker.vue  SideBar.vue  Side_bar.vue  TimetableInitializer.vue
frontend/src/layouts/: default.vue
frontend/src/pages/: ClassCatalogs.vue  ClassHours.vue  Classes.vue  LocationCatalogs.vue  Locations.vue  Login.vue  Subjects.vue  TeacherCatalogs.vue  Teachers.vue  index.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: ClassCatalogView.vue  ClassHoursView.vue  ClassesView.vue  GeneratorView.vue  HomeView.vue  LocationCatalogView.vue  LocationsView.vue  LoginView.vue  RegisterView.vue  SubjectsView.vue  TeacherCatalogView.vue  TeachersView.vue  TimetableView.vue
(+75 files in other folders)
