cmake_minimum_required(VERSION 3.15)

# Set the solution name (this will be the name of the generated solution)
project(TimetableGeneratorSolution)

# Add subdirectories (projects)
add_subdirectory(TimetableGenerator)
add_subdirectory(InputDataGenerator)
add_subdirectory(GeneratorServer)
add_subdirectory(TimetableGeneratorExe)
